        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Manifold:
            - Added a spaceship operator (<=>) for aesthetic comparisons.
              This has the effect of implementing all comparison operators,
              not just less-than (<) as before.
        Class Matrix<T>:
            - Added a copy constructor that takes a matrix whose elements are
              of a different type.
            - Added destructive and non-destructive rank() functions.
            - New routines negateRow() and negateCol().
            - New routine initialised().
            - Renamed initialise() to fill(), to make it clear that this has
              nothing to do with initialised vs uninitialised matrices.
              The old name is kept but deprecated.
            - The extra ring template argument is gone; instead those matrix
              functions that work with rings now require the specialisation
              RingTraits<T> to be available.  This expands the scope of those
              member functions to now include native C++ floating-point types
              and Regina's various polynomial types.
            - Python now has a new binding MatrixReal to represent the
              C++ type Matrix<double>.
        Class ModelLinkGraph:
            - Now supports non-planar graphs (as used with virtual links), as
              well as disconnected and/or empty graphs.
            - New routines countComponents(), isSimple(), isConnected(), and
              genus().
            - Routine generateMinimalLinks() now supports multiple-component
              links.  Moreover, it has a new precondition requiring no 1-gons
              in the induced cell decomposition, and throws an exception if
              this precondition fails.
            - New routine generateAnyLink().
            - New routine canonical().